@@ -1,10 +1,9 @@
 [entity-name]
 washbox=Washbox
+washbox--pipe=Washbox pipe
 
 [entity-description]
-# washbox=Pumping speed must be at least 1000/s.
-# washbox=Crafting speed depends on flow rate.
-washbox=Crafting speed depends on pumping speed.
+washbox=Crafting speed depends on flow rate.
 
 [recipe-name]
 washbox-washing=Washbox washing
